infra/k8s_legacy/quarantine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarantine-service
  namespace: quarantine-system
spec:
  selector:
    app: quarantine-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
